--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,20 @@
   <link rel="icon" type="image/svg+xml" href="/bit-cube-small.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bit</title>
+  <style>
+    body {
+      background-color: rgb(24, 24, 24);
+    }
+
+    @media (prefers-color-scheme: light) {
+      body {
+        background-color: rgb(255, 255, 255);
+      }
+    }
+  </style>
 </head>
 
-<body style="background-color: black;">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
