--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/bit-cube-small.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bit</title>
-    <style>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/public/bit-cube-small.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bit</title>
+  <style>
+    body {
+      background-color: rgb(10, 10, 10);
+    }
+
+    @media (prefers-color-scheme: light) {
       body {
-        background-color: rgb(10, 10, 10);
+        background-color: rgb(255, 255, 255);
       }
+    }
+  </style>
+</head>
 
-      @media (prefers-color-scheme: light) {
-        body {
-          background-color: rgb(255, 255, 255);
-        }
-      }
-    </style>
-  </head>
+<body>
+  <div id="root"></div>
+</body>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
 </html>
